[package]
name = "map_generator"
version = "0.1.0"
authors = ["Lepidora <miamukherjee2+lepidora@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
image = "*"
rand = "*"
gfx-hal = "*"
json = "*"
lazy_static = "1.4.0"